--- a/control
+++ b/control
@@ -5,6 +5,6 @@ Priority: optional
 Architecture: amd64
 Maintainer: Ubuntu MOTU Developers (ubuntu-motu@lists.ubuntu.com)
 Description: to clean your linux and make him safty 
-#speed--
-#more storage 
-#easy to use 
+speed--
+more storage 
+easy to use 
